deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ga4gh-service-info
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ga4gh-service-info
  template:
    metadata:
      labels:
        app: ga4gh-service-info
    spec:
      containers:
      - name: service-info
        image: ga4gh-service-info-service-info:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config-volume
          mountPath: /etc/service-info
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 2
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8080
          initialDelaySeconds: 2
          periodSeconds: 5
      volumes:
      - name: config-volume
        configMap:
          name: service-info-config
