deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ga4gh-SERVICE
spec:
  selector:
    app: ga4gh-SERVICE
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
